Feat: apply Front-End suggestions (#75)
* Fix: errors in socket

* Fix: console code

--- a/packages/kkujjang-api-server/public/socket_test.html
+++ b/packages/kkujjang-api-server/public/socket_test.html
@@ -150,7 +150,7 @@
         })
 
         socket.on('change room owner', (res) => {
-          socket.emit('load room')
+          console.log(`change room owner : ${JSON.stringify(res)}`)
         })
 
         socket.on('complete change room config', (res) => {
