Feat: 1.Feature/ban | 2.rabbitMQ docker compose | 3.socket session | 4.docker compose timezone (#81)
* Feat: ban router skeleton

* Feat: before getSession logic

* Feat: socket server session

* Feat: setup docker-compose

* Feat: docker-compose TZ env

* Style: ban router post to put

* Docs: wrtie jsdoc

* Docs: .gitignore

--- a/packages/kkujjang-api-server/public/socket_test.html
+++ b/packages/kkujjang-api-server/public/socket_test.html
@@ -93,7 +93,6 @@
 
         socket.on('complete switch ready state', (res) => {
           console.log(`complete switch ready state: ${JSON.stringify(res)}`)
-          socket.emit('game start')
         })
 
         socket.on('complete game start', (game) => {
@@ -159,6 +158,10 @@
 
         socket.on('error', (err) => {
           console.log(`error: ${JSON.stringify(err)}`)
+        })
+
+        socket.on('banned', (res) => {
+          alert(`사용자님은 밴 되었습니다 ${JSON.stringify(res)}`)
         })
 
         socket.emit('load room list')
