--- a/packages/kkujjang-api-server/public/socket_test.html
+++ b/packages/kkujjang-api-server/public/socket_test.html
@@ -9,7 +9,7 @@
       <button onclick="setUpSocket()">연결</button>
     </div>
     <button id="disconnect" onclick="socket.disconnect()">연결해제</button>
-    <script src="http://localhost:4000/socket.io/socket.io.js"></script>
+    <script src="http://localhost:2000/socket.io/socket.io.js"></script>
     <script>
       let gameEnded = false
       let roundword = ''
@@ -35,8 +35,8 @@
 
       let socket
 
-      const setUpSocket = async () => {
-        socket = await io('http://localhost:4000', {
+      async function setUpSocket() {
+        socket = await io('http://localhost:2000', {
           reconnection: false,
           extraHeaders: {
             sessionId: sessionId.value,
